// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sequence displays error message on sequence load failure 1`] = `
<DocumentFragment>
  <p
    class="text-center py-5 mx-auto"
    style="max-width: 30em;"
  >
    There was an error loading this course.
  </p>
</DocumentFragment>
`;

exports[`Sequence handles loading unit 1`] = `
<DocumentFragment>
  <div
    class="sequence-container"
  >
    <div
      class="sequence"
    >
      <nav
        class="sequence-navigation mb-4"
      >
        <button
          class="btn previous-btn"
          type="button"
        >
          <img
            alt="fa-chevron-left"
            class="fa-chevron-left"
            data-testid="icon"
          />
          <span>
            Previous
          </span>
        </button>
        <div
          style="flex-basis: 100%; min-width: 0;"
        >
          <div
            class="sequence-navigation-tabs-container"
          >
            <div
              class="sequence-navigation-tabs d-flex flex-grow-1"
              style=""
            >
              <button
                class="btn"
                title="1"
                type="button"
              >
                <img
                  alt="fa-book"
                  class="fa-book"
                  data-testid="icon"
                />
              </button>
              <button
                class="btn"
                title="2"
                type="button"
              >
                <img
                  alt="fa-book"
                  class="fa-book"
                  data-testid="icon"
                />
              </button>
              <button
                class="btn active"
                title="3"
                type="button"
              >
                <img
                  alt="fa-book"
                  class="fa-book"
                  data-testid="icon"
                />
              </button>
              <button
                class="btn"
                title="4"
                type="button"
              >
                <img
                  alt="fa-book"
                  class="fa-book"
                  data-testid="icon"
                />
              </button>
              <button
                class="btn"
                title="5"
                type="button"
              >
                <img
                  alt="fa-book"
                  class="fa-book"
                  data-testid="icon"
                />
              </button>
              <button
                class="btn"
                title="6"
                type="button"
              >
                <img
                  alt="fa-book"
                  class="fa-book"
                  data-testid="icon"
                />
              </button>
              <button
                class="btn"
                title="7"
                type="button"
              >
                <img
                  alt="fa-book"
                  class="fa-book"
                  data-testid="icon"
                />
              </button>
              <button
                class="btn"
                title="8"
                type="button"
              >
                <img
                  alt="fa-book"
                  class="fa-book"
                  data-testid="icon"
                />
              </button>
              <button
                class="btn"
                title="9"
                type="button"
              >
                <img
                  alt="fa-book"
                  class="fa-book"
                  data-testid="icon"
                />
              </button>
              <button
                class="btn"
                title="10"
                type="button"
              >
                <img
                  alt="fa-book"
                  class="fa-book"
                  data-testid="icon"
                />
              </button>
            </div>
          </div>
        </div>
        <button
          class="btn next-btn"
          type="button"
        >
          <span>
            Next
          </span>
          <img
            alt="fa-chevron-right"
            class="fa-chevron-right"
            data-testid="icon"
          />
        </button>
      </nav>
      <div
        class="unit-container flex-grow-1"
      >
        <div
          class="unit"
        >
          <h2
            class="mb-0 h4"
          >
            3
          </h2>
          <button
            aria-disabled="false"
            aria-live="assertive"
            class="btn pgn__stateful-btn pgn__stateful-btn-state-default btn-link px-1 ml-n1 btn-sm"
            type="button"
          >
            <span
              class="d-flex align-items-center justify-content-center"
            >
              <span
                class="pgn__stateful-btn-icon"
              >
                <img
                  alt="fa-bookmark"
                  class="fa-bookmark"
                  data-testid="icon"
                />
              </span>
              <span>
                Bookmark this page
              </span>
            </span>
          </button>
          <div>
            <div
              class="d-flex justify-content-center align-items-center flex-column"
              style="height: 50vh;"
            >
              <div
                class="spinner-border text-primary"
                role="status"
              >
                <span
                  class="sr-only"
                >
                  Loading learning sequence...
                </span>
              </div>
            </div>
          </div>
          <div
            class="unit-iframe-wrapper"
          >
            <iframe
              allowfullscreen=""
              height="0"
              id="unit-iframe"
              referrerpolicy="origin"
              scrolling="no"
              src="http://localhost:18000/xblock/3?show_title=0&show_bookmark_button=0"
              title="3"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sequence handles loading unit 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -190,40 +190,53 @@
                <span>
                  Bookmark this page
                </span>
              </span>
            </button>
-           <div>
-             <div
-               class=\\"d-flex justify-content-center align-items-center flex-column\\"
-               style=\\"height: 50vh;\\"
-             >
-               <div
-                 class=\\"spinner-border text-primary\\"
-                 role=\\"status\\"
-               >
-                 <span
-                   class=\\"sr-only\\"
-                 >
-                   Loading learning sequence...
-                 </span>
-               </div>
-             </div>
-           </div>
            <div
              class=\\"unit-iframe-wrapper\\"
            >
              <iframe
                allowfullscreen=\\"\\"
-               height=\\"0\\"
+               height=\\"300\\"
                id=\\"unit-iframe\\"
                referrerpolicy=\\"origin\\"
                scrolling=\\"no\\"
                src=\\"http://localhost:18000/xblock/3?show_title=0&show_bookmark_button=0\\"
                title=\\"3\\"
              />
            </div>
+         </div>
+         <div
+           class=\\"unit-navigation d-flex\\"
+         >
+           <button
+             class=\\"btn btn-outline-secondary previous-button mr-2\\"
+             type=\\"button\\"
+           >
+             <img
+               alt=\\"fa-chevron-left\\"
+               class=\\"fa-chevron-left\\"
+               data-testid=\\"icon\\"
+             />
+             <span>
+               Previous
+             </span>
+           </button>
+           <button
+             class=\\"btn btn-outline-primary next-button\\"
+             type=\\"button\\"
+           >
+             <span>
+               Next
+             </span>
+             <img
+               alt=\\"fa-chevron-right\\"
+               class=\\"fa-chevron-right\\"
+               data-testid=\\"icon\\"
+             />
+           </button>
          </div>
        </div>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Sequence renders correctly for gated content 1`] = `
<DocumentFragment>
  <div
    class="sequence-container"
  >
    <div
      class="sequence"
    >
      <nav
        class="sequence-navigation mb-4"
      >
        <button
          class="btn previous-btn"
          type="button"
        >
          <img
            alt="fa-chevron-left"
            class="fa-chevron-left"
            data-testid="icon"
          />
          <span>
            Previous
          </span>
        </button>
        <button
          class="btn active"
          title="3"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn next-btn"
          type="button"
        >
          <span>
            Next
          </span>
          <img
            alt="fa-chevron-right"
            class="fa-chevron-right"
            data-testid="icon"
          />
        </button>
      </nav>
      <div
        class="unit-container flex-grow-1"
      >
        <div>
          <div
            class="d-flex justify-content-center align-items-center flex-column"
            style="height: 50vh;"
          >
            <div
              class="spinner-border text-primary"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading locked content messaging...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sequence renders correctly for gated content 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -47,26 +47,31 @@
          </button>
        </nav>
        <div
          class=\\"unit-container flex-grow-1\\"
        >
-         <div>
-           <div
-             class=\\"d-flex justify-content-center align-items-center flex-column\\"
-             style=\\"height: 50vh;\\"
+         <h3>
+           <img
+             alt=\\"fa-lock\\"
+             class=\\"fa-lock\\"
+             data-testid=\\"icon\\"
+           />
+            test-sequence-3
+         </h3>
+         <h4>
+           Content Locked
+         </h4>
+         <p>
+           You must complete the prerequisite: 'test-gated-section' to access this content.
+         </p>
+         <p>
+           <button
+             class=\\"btn btn-primary\\"
+             type=\\"button\\"
            >
-             <div
-               class=\\"spinner-border text-primary\\"
-               role=\\"status\\"
-             >
-               <span
-                 class=\\"sr-only\\"
-               >
-                 Loading locked content messaging...
-               </span>
-             </div>
-           </div>
-         </div>
+             Go To Prerequisite Section
+           </button>
+         </p>
        </div>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Sequence renders correctly without data 1`] = `
<DocumentFragment>
  <div>
    <div
      class="d-flex justify-content-center align-items-center flex-column"
      style="height: 50vh;"
    >
      <div
        class="spinner-border text-primary"
        role="status"
      >
        <span
          class="sr-only"
        >
          Loading learning sequence...
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
